2013-07-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature)
	(mime-decrypt-application/pgp-encrypted): pass string to
	epa-display-info function.  This is the fix for the change of
	2012-10-06.

2013-06-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature-internal)
	(mime-verify-application/*-signature)
	(mime-preview-application/*-signature): Avoid signaling error when
	protocol parameter of Contetn-Type header is incorrect or missing.

2013-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* SEMI-ELS (semi-modules-to-compile): Add mime-signature.el.

	* mime-edit.el: Do not require signature.el
	(mime-edit-insert-signature): Moved to mime-signature.el and
	define atuload for it.

	* mime-signature.el: New file.

	* semi-setup.el (mime-setup-use-signature): Now nil is default.

2012-12-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypted-buffers): New variable.
	(mime-pgp-kill-decrypted-buffers): New function.
	(mime-preview-application/pgp-encrypted): Keep decrypted content
	until the preview buffer is killed.

	* mime-view.el (mime-display-entity): Do not propertize with
	mime-view-* properties on already propertized region.

2012-12-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-def.el (mime-add-condition): Define autoload for method and
	body-presentation-method's parameter.

	* semi-setup.el: Use mime-add-condtion for preview functions that
	require autoload.

2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove settings for mime-view-application/pgp
	function.  SEMI-EPG does not have this funciton.

2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el: Require mmgeneric.el in compiling.
	(mime-preview-application/pgp-encrypted): New function. Imported
	and modified from Wanderlust.

	* semi-setup.el: Add setting for
	mime-preview-application/pgp-encrypted.

2012-12-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
