@@ -1,3 +1,15 @@
+2013-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-content-types): Add entry for text/vcard.
+	(mime-file-types): Add entry for .vcf file.
+
+	* semi-setup.el: Define previewer for text/vcard part as well as
+	text/x-vcard.
+
+	* mime-vcard.el (mime-display-text/vcard-hook): Renamed from
+	mime-display-text/x-vcard-hook.  Define explicitly.
+	(mime-display-text/vcard): Renamed from mime-display-text/x-vcard.
+
 2013-07-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-pgp.el (mime-verify-application/*-signature)
